--- a/WebAPI-Practice/WebAPI-Practice.csproj
+++ b/WebAPI-Practice/WebAPI-Practice.csproj
@@ -4,7 +4,10 @@
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <RootNamespace>WebApplication1</RootNamespace>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
+    </ItemGroup>
 
 </Project>
